[package]
name = "dag_compute"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
slotmap = "1.0"
log = "0.4"

[dev-dependencies]
wav = "1.0"
rand = {version = "0.8", default-features = false, features = ["getrandom", "small_rng"]}