[package]
name = "dag_compute"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for the construction of arbitrary computation DAGs and the expression of dataflow graphs"
homepage = "https://github.com/rlee287/dag_compute"
repository = "https://github.com/rlee287/dag_compute"
documentation = "https://docs.rs/dag_compute"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
slotmap = "1.0"
log = "0.4"

[dev-dependencies]
wav = "1.0"
rand = {version = "0.8", default-features = false, features = ["getrandom", "small_rng"]}
version-sync = { version = ">=0.9.3, < 0.10.0", default-features = false, features = ["html_root_url_updated"] }
